# aitop

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
docs/: orchestrator-research.md
menubar/: Info.plist  Makefile  Package.swift
menubar/Sources/AitopMenuBar/: AitopMenuBarApp.swift  DataStore.swift  MenuBarLabel.swift  MenuBarView.swift  Models.swift  Preferences.swift  SettingsView.swift  Theme.swift
src/: app.rs  config.rs  lib.rs  main.rs  serve.rs
src/data/: aggregator.rs  amp.rs  db.rs  gemini.rs  kimi.rs  litellm.rs  mod.rs  mux.rs  openclaw.rs  parser.rs  pricing.rs  provider.rs  qwen.rs  roo_code.rs  watcher.rs
src/ui/: dashboard.rs  filter.rs  format.rs  help.rs  layout.rs  mod.rs  models.rs  session_detail.rs  sessions.rs  theme.rs  trends.rs
src/ui/widgets/: cost_color.rs  mod.rs
widget/: aitop-widget.js
