[package]
name = "aitop"
version = "0.6.2"
edition = "2021"
authors = ["Saurabh Mishra"]
description = "btop for AI — terminal dashboard for token usage and costs"
license = "MIT"
repository = "https://github.com/bugkill3r/aitop"
homepage = "https://github.com/bugkill3r/aitop"
readme = "README.md"
keywords = ["ai", "terminal", "dashboard", "claude", "tui"]
categories = ["command-line-utilities", "visualization"]
exclude = [".github/", ".claude/", "docs/", "npm/", "homebrew/", "menubar/"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
urlencoding = "2"
anyhow = "1"
rayon = "1"
ureq = "3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
